A11y text color contrast fix

--- a/_sass/minima/_article.scss
+++ b/_sass/minima/_article.scss
@@ -26,7 +26,7 @@ article.guide {
     display: inline-block;
     padding: 0 $spacing-unit/3*2;
     border-radius: 3px;
-    color: white;
+    color: black;
     line-height: 43px;
     text-decoration: none;
     background-color: $primary-color;
